<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="416dp"
        android:layout_height="129dp"
        android:background="@drawable/effect2"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="124dp"
            android:text="@string/title"
            android:textColor="@color/purple_700"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView3"
            app:layout_constraintHorizontal_bias="0.571"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.758"
            app:srcCompat="@drawable/facultylogo" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="119dp"
            android:layout_height="96dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ainshamsunivlogo" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="385dp"
        android:layout_height="81dp"
        android:gravity="right"
        android:text="تحقيق الريادة في الأوساط الجامعية لتكون إحدى المنارات العلمية والبحثية للنهوض بالمجتمع. "
        android:textColor="@color/purple_700"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/events"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.615"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:layout_constraintVertical_bias="0.612" />

    <Button
        android:id="@+id/events"
        android:layout_width="206dp"
        android:layout_height="57dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/effect1"
        android:onClick="onClickEvents"
        android:textColor="#FFFFFF"
        android:text="@string/Events"
        app:backgroundTint="@color/teal_700"
        app:layout_constraintBottom_toTopOf="@+id/news"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:layout_constraintVertical_bias="0.941" />

    <Button
        android:id="@+id/news"
        android:layout_width="206dp"
        android:layout_height="57dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/effect1"
        android:textColor="#FFFFFF"
        android:onClick="onClickNews"
        android:text="@string/News"
        app:backgroundTint="@color/teal_700"
        app:layout_constraintBottom_toTopOf="@+id/gpa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/gpa"
        android:layout_width="206dp"
        android:layout_height="57dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/effect1"
        android:onClick="onClickGpa"
        android:text="@string/GPA"
        android:textColor="#FFFFFF"
        android:textColorLink="#FFFFFF"
        app:backgroundTint="@color/teal_700"
        app:layout_constraintBottom_toTopOf="@+id/facebook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/facebook"
        android:layout_width="206dp"
        android:layout_height="57dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/effect1"
        android:onClick="onClickFacebook"
        android:text="@string/Facebook"
        android:textColor="#FFFFFF"
        app:backgroundTint="@color/teal_700"
        app:layout_constraintBottom_toTopOf="@+id/adds"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/adds"
        android:layout_width="206dp"
        android:layout_height="57dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/effect1"
        android:onClick="onClickAdds"
        android:text="@string/Advertisement"
        android:textColor="#FFFFFF"
        app:backgroundTint="@color/teal_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/suggestions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteX="103dp" />

    <Button
        android:id="@+id/suggestions"
        android:layout_width="206dp"
        android:layout_height="57dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/effect1"
        android:onClick="onClickSuggestions"
        android:text="@string/suggestions"
        android:textColor="#FFFFFF"
        app:backgroundTint="@color/teal_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="438dp"
        android:layout_height="442dp"
        android:alpha=".5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/edubackground" />


</androidx.constraintlayout.widget.ConstraintLayout>